# CheOpLast

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_backup.txt  commondata.hpp  field_mappings.json  main.cpp
Classifier/: classifier.cpp  classifier.h
Cryptography/: cipher.cpp  cipher.h  cryptotools.cpp  cryptotools.h  systemkeys.cpp  systemkeys.h
DataHandler/: datahandler.h
Database/: MongoDB.cpp  MongoDB.h
IDLM/: classifier.h  detection.h  idlm.h  onnx.h
Inference/: inference.h
Kafka/: KafkaProsumer.cpp  KafkaProsumer.h  Utility.h
Logs/: log.h
ReadConfigurations/: configurate.cpp  configurate.h
SaveData/: savedata.cpp  savedata.h
Service/: Service.cpp  Service.h
Service/KafkaService/: kafkaservice.cpp  kafkaservice.h
Service/Rahdari/: rahdariService.cpp  rahdariService.h
Service/WebService/: savaClassifier.txt  webservice.cpp  webservice.h
StoreImage/: storeimage.cpp  storeimage.h
StoreImage/banner20/: bannerapi.h
StoreImage/banner22/: bannerapi.h
SystemMonitor/: monitor.cpp  monitor.hpp
Time/: timetools.cpp  timetools.h
Validator/: key_Mapper.h  validator.cpp  validator.h
checkop/: checkop.h  chop.cpp  chop.h
crow/: http_connection.h  http_request.h
include/nn/: base.h  common.h  error_codes.h
include/utility/: matching.h
ocr/: ocr.cpp  ocr.h
